--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ line_length = 100
 max-line-length = 100
 extend-ignore = E203, W503
 select = B,C,E,F,P,T4,W,B9
-per-file-ignores = __init__.py: F401
+per-file-ignores = __init__.py,hubconf.py: F401
 exclude =
     ./.git,
     ./doc
