--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
-autoflake>=1.4
-black>=21.11b1
-flake8>=4.0.1
-isort>=5.10.1
+autoflake==1.4
+black==21.11b1
+flake8==4.0.1
+isort==5.10.1
 pre-commit>=2.15.0
 pylint>=2.11.1
 pytest>=6.2.5
